Added test redirect links